2016-10-16  Eric Herman <eric@freesa.org>

	Add tests, and supporting code

	* src/eh-printf.c: support "%X", fix negative, "%5d", "%050d"
	* tests/test-hex-int.c: supporting text for "%X"
	* tests/test-negative.c: test a negative val
	* tests/test-pct5d.c: test padding

2016-10-15  Eric Herman <eric@freesa.org>

	an initial sketch of a sprintf for embedded

	* src/eh-printf.h: created the first API
	* src/eh-printf.c: initial impl
	* tests/test-simple.c: a dumb test
	* configure.ac: basic autotools configure
	* Makefile.am: basic autotools Makefile
	* misc/pre-tidy.patch: prevent Gnu indent from indenting extra
	* .gitignore: added test-simple
	* README: add explanation and build instructions
	* ChangeLog: Freshly created ChangeLog.