@@ -1,3 +1,12 @@
+2016-10-17  Eric Herman <eric@freesa.org>
+
+	Add tests, and supporting code for "%u" and "%lu"
+
+	* src/eh-printf.c: support "%lu"
+	* tests/test-unsigned.c: test "%u", "%lu"
+	* Makefile.am: include test-unsigned
+	* .gitignore: ignore test-unsigned
+
 2016-10-16  Eric Herman <eric@freesa.org>
 
 	Add tests, and supporting code
